# cerberus-mcp

./: .cerberus_dev_session 2.json  .cerberus_session 2.json  .coverage  .gitignore  AGENT_INSTRUCTIONS.md  AI-Efficiency-AppIdea.md  AI_AGENT_CHECKLIST.md  ARCHITECTURAL_VISION.md  BUGS_DOGFOOD_READ.md  CERBERUS-ARCHITECTURE.md  CERBERUS-COMMANDS.md  CERBERUS-DEVELOPMENT.md  CERBERUS-LEADERSHIP.md  CERBERUS.md  CERBERUS_COMPRESSION_TEST.md  CERBERUS_VALIDATION_TEST.md  COMPLETION_SUMMARY.md  DESIGN-CONFIG-DRIVEN-ARCHITECTURE.md  DOC_INDEX.md  GLOBAL_INSTALL_STATUS.md  HANDOFF.md  Layout.md  PHASE14_4_COMPLETE.md  PHASE14_4_VALIDATION.md  PHASE3_COMPLETE.md  PHASE4_COMPLETION.md  README.md  ROADMAP.md  ROBUSTNESS_STRATEGY.md  SELF_SIMILARITY.md  WIKI-PUBLISH.md  agent_compatibility_results.json  batch_operations_simple.json  benchmark_memory.py  compile_grammars.py  coverage.json  demo_client.py  demo_index.json  demo_phase14_4.py  demo_symbol_guard.py  (+18 more)
.cerberus_backups/: test_batch_example.py.20260109_190549.backup  test_batch_example.py.20260109_191311.backup  test_batch_example.py.20260109_191333.backup  test_blueprint_simple.py.20260109_234456.backup  test_guard_demo.py.20260109_233159.backup
.handoff-archive/: README.md
benchmarks/: benchmark_streaming_output.txt
demo/: README.md  auth.py  database.ts
docs/: AGENT_GUIDE.md  DOGFOODING_IMPROVEMENTS.md  DOGFOODING_IMPROVEMENTS_2026-01-09.md  DOGFOODING_MANDATE.md  DOGFOODING_PAUSE_PROTOCOL.md  FUTURE-IMPROVEMENTS.md  FUTURE_EXPANSION.md  MANDATES.md  PHASE10_SPEC.md  PHASE11_SPEC.md  PHASE12_SPEC.md  PHASE13.2_DOGFOODING_REPORT.md  PHASE13_SPEC.md  ROADMAP.md  (+18 more)
(+485 files in other folders)
