[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus-context"
version = "2.0.0"
description = "AST-based code exploration with session memory for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "watchdog>=3.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "tree-sitter>=0.20.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
cerberus-mcp = "cerberus.mcp:run_server"

[tool.setuptools.package-data]
cerberus = ["*.py"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cerberus*"]
